Set the applicationContext path in the web.xml file

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -32,12 +32,12 @@
     </filter-mapping>
 
     <welcome-file-list>
-        <welcome-file>login.jsp</welcome-file>
+        <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
 
 	<context-param>
 	    <param-name>contextConfigLocation</param-name>
-	    <param-value>applicationContext.xml</param-value>
+	    <param-value>classpath:applicationContext.xml</param-value>
 	</context-param>
 
     <listener>
